<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="12dp"
    android:layout_marginTop="3dp"
    app:cardCornerRadius="20dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/doorLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageDoor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/img" />

            <TextView
                android:id="@+id/titleDoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:text="@string/door"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/btnFavorited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favorites"
            android:padding="8dp"
            android:src="@drawable/star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit"
            android:padding="8dp"
            android:src="@drawable/edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnFavorited"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>