<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="12dp"
    app:cardCornerRadius="20dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/camera_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageCam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img" />

            <TextView
                android:id="@+id/titleCam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:text="@string/camera"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favorites"
            android:padding="8dp"
            android:src="@drawable/star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.cardview.widget.CardView>